<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timeshare</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="loginBtn">Login</string>
    <string name="signupBtn">Sign Up</string>
    <string name="logoutBtn">Log Out</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm your Password</string>
    <string name="Welcome">Welcome!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_section1">Create Task</string>
    <string name="main_section2">Circles</string>
    <string name="main_section3">Profile</string>
    <string name="need">I need</string>
    <string name="when">when</string>
    <string name="where">where</string>
    <string name="special">Special Instructions</string>
    <string name="submit">Submit</string>

    <string-array name="needs">
        <item>someone to babysit</item>
        <item>someone to pickup kid(s)</item>
        <item>a ride</item>
        <item>to borrow a car</item>
    </string-array>
    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_circles">CirclesActivity</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="createtask">Creat Task</string>
    <string name="taskhistory">Task History</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Profile</item>
        <item>Create Task</item>
        <item>Browse Tasks</item>
        <item>Logout</item>
        <item>Edit Profile</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_accept">AcceptActivity</string>
    <string name="title_activity_respond">RespondActivity</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_createtask">CreatetaskActivity</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="view">View Profile</string>
    <string name="create">Create Task</string>
    <string name="browse">Browse Task</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>

</resources>
