<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="owner"
        android:id="@+id/owner" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need"
        android:id="@+id/need" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when"
        android:id="@+id/when" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where"
        android:id="@+id/where" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special"
        android:id="@+id/special" />
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nobody"
        android:id="@+id/taker" />


            <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept" />
    <Button
        android:id="@+id/decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline" />

    </LinearLayout>

</LinearLayout>
