<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >
 
    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />
 
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:inputType="text" />
 
    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:text="@string/password" />
 
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword" />
 
    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/loginBtn" />

    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_centerVertical="true"
        android:text="@string/signupBtn" />

    <Button
        android:id="@+id/fpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup"
        android:layout_alignRight="@+id/signup"
        android:layout_below="@+id/signup"
        android:text="Forgot Password" />
 
</RelativeLayout>